fix: focused teaser in high contrast

--- a/src/elements/teaser/teaser.scss
+++ b/src/elements/teaser/teaser.scss
@@ -44,6 +44,12 @@
   cursor: var(--sbb-cursor-pointer);
 
   @include sbb.zero-width-space;
+
+  @include sbb.if-forced-colors {
+    padding: var(--sbb-border-width-2x);
+    border: var(--sbb-border-width-1x) solid CanvasText;
+    border-radius: var(--sbb-teaser-border-radius);
+  }
 }
 
 .sbb-teaser {
@@ -58,12 +64,10 @@
   }
 
   @include sbb.if-forced-colors {
-    outline-offset: var(--sbb-focus-outline-offset);
-    outline: CanvasText solid var(--sbb-focus-outline-width);
-    border-radius: var(--sbb-teaser-border-radius);
+    --sbb-focus-outline-color: Highlight;
 
     &:hover {
-      outline-color: Highlight;
+      @include sbb.focus-outline;
     }
   }
 }
